button generator for categories

--- a/ProfileMatch.Components/Admin/AdminPeopleList.razor
+++ b/ProfileMatch.Components/Admin/AdminPeopleList.razor
@@ -5,36 +5,32 @@
 else
 {
     <MudText Typo="Typo.h6">@L["Resource Administration"]</MudText>
-    <MudTable Items="@Users" Dense="true" Hover="true" Bordered="false" Striped="false" Filter="new Func<ApplicationUser,bool>(FilterFunc1)" SortLabel=@L["Sort By"]>
+    <MudTable Items="@Users" Dense="true" Hover="true" Bordered="true" Striped="false" Filter="new Func<ApplicationUser,bool>(FilterFunc1)" SortLabel=@L["Sort By"]>
         <ToolBarContent>
             <MudTextField @bind-Value="SearchString" Placeholder=@L["Search"] Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
             <MudButton OnClick="@(()=> EditProfile(new ApplicationUser()))" Class="pa-2 mx-2" Variant="Variant.Filled" Color="Color.Primary">@L["New"]</MudButton>
         </ToolBarContent>
         <HeaderContent>
-            <MudTh><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.Department.Name)" SortLabel=@L["Department"] T="ApplicationUser">@L["Department"]</MudTableSortLabel></MudTh>
-            <MudTh>@L["Photo"]</MudTh>
-            <MudTh><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.FirstName)" SortLabel=@L["First Name"] T="ApplicationUser">@L["First Name"]</MudTableSortLabel></MudTh>
-            <MudTh><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.LastName)" SortLabel=@L["Last Name"] T="ApplicationUser">@L["Last Name"]</MudTableSortLabel></MudTh>
-            <MudTh><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.DateOfBirth?.Date)" SortLabel=@L["Date Of Birth"] T="ApplicationUser">@L["Birth Date"]</MudTableSortLabel></MudTh>
-            <MudTh><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.IsActive)" SortLabel=@L["Is Active"] T="ApplicationUser">@L["Is Active"]</MudTableSortLabel></MudTh>
-            <MudTh>@L["Edit"]</MudTh>
-            <MudTh>@L["Profile"]</MudTh>
+            <MudTh Style="text-align: center;"><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.Department.Name)" SortLabel=@L["Department"] T="ApplicationUser">@L["Department"]</MudTableSortLabel></MudTh>
+            <MudTh Style="text-align: center;">@L["Photo"]</MudTh>
+            <MudTh Style="text-align: center;"><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.FirstName)" SortLabel=@L["First Name"] T="ApplicationUser">@L["First Name"]</MudTableSortLabel></MudTh>
+            <MudTh Style="text-align: center;"><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.LastName)" SortLabel=@L["Last Name"] T="ApplicationUser">@L["Last Name"]</MudTableSortLabel></MudTh>
+            <MudTh Style="text-align: center;"><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.DateOfBirth?.Date)" SortLabel=@L["Date Of Birth"] T="ApplicationUser">@L["Birth Date"]</MudTableSortLabel></MudTh>
+            <MudTh Style="text-align: center;"><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.IsActive)" SortLabel=@L["Is Active"] T="ApplicationUser">@L["Is Active"]</MudTableSortLabel></MudTh>
+            <MudTh Style="text-align: center;">@L["Action"]</MudTh>
         </HeaderContent>
         <RowTemplate>
-            <MudTd DataLabel=@L["Department"]>@(context.Department==null? @L["unassigned"] : @L[context.Department.Name])</MudTd>
-            <MudTd DataLabel=@L["Photo"]><MudAvatar Image="@context.PhotoPath" Size="Size.Large" /></MudTd>
-            <MudTd DataLabel=@L["First Name"]>@context.FirstName</MudTd>
-            <MudTd DataLabel=@L["Last Name"]>@context.LastName</MudTd>
-            <MudTd DataLabel=@L["Date Of Birth"]>@context.DateOfBirth?.ToShortDateString()</MudTd>
-            <MudTd DataLabel=@L["Is Active"]><MudCheckBox Disabled="true" @bind-Checked="@context.IsActive"></MudCheckBox></MudTd>
-            <MudTd DataLabel="">
+            <MudTd Style="text-align: center;" DataLabel=@L["Department"]>@(context.Department==null? @L["unassigned"] : @L[context.Department.Name])</MudTd>
+            <MudTd Style="text-align: center;" DataLabel=@L["Photo"]><MudAvatar Image="@context.PhotoPath" Size="Size.Large" /></MudTd>
+            <MudTd Style="text-align: center;" DataLabel=@L["First Name"]>@context.FirstName</MudTd>
+            <MudTd Style="text-align: center;" DataLabel=@L["Last Name"]>@context.LastName</MudTd>
+            <MudTd Style="text-align: center;" DataLabel=@L["Date Of Birth"]>@context.DateOfBirth?.ToShortDateString()</MudTd>
+            <MudTd Style="text-align: center;" DataLabel=@L["Is Active"]><MudCheckBox Disabled="true" @bind-Checked="@context.IsActive"></MudCheckBox></MudTd>
+            <MudTd Style="text-align: center;" DataLabel="Action">
              @*   @if(user.Identity.Name!=context.Email){*@
                
                 <MudButton OnClick="@(()=> EditProfile(context))" Color="Color.Tertiary">@L["Edit User"]</MudButton>
-                @*}*@
-            </MudTd>
-            <MudTd DataLabel="">
-               
+                @*}*@              
            <MudButton OnClick="@(()=>ShowProfile(context))" Color="Color.Success">@L["Show profile"]</MudButton>
             </MudTd>
         </RowTemplate>
