--- a/ProfileMatch.Components/Admin/AdminClosedQuestions.razor
+++ b/ProfileMatch.Components/Admin/AdminClosedQuestions.razor
@@ -27,20 +27,26 @@ else
             </MudGrid>
     <MudTable Items="@(GetQuestions())" SortLabel=@L["Sort By"] Dense="true" Hover="true" Bordered="false" Striped="false" Breakpoint="Breakpoint.Sm" Filter="new Func<ClosedQuestion,bool>(FilterFunc1)" @bind-SelectedItem="selectedItem1">
         <ToolBarContent>
-           <MudButton Variant=Variant.Text Color="Color.Success">@L["New Category"]</MudButton> <MudText Typo="Typo.body2">@L["Selected Categories"]:  @(string.Join(", ", Cats.Select(x=>$"\"{x}\""))) </MudText>
-<MudSpacer/>
+            <MudButton Variant=Variant.Text Color="Color.Success">@L["New Category"]</MudButton> <MudText Typo="Typo.body2">@L["Selected Categories"]:</MudText> @foreach (var cat in Cats)
+            {
+                if (!string.IsNullOrEmpty(cat))
+                {
+            <MudButton Color="Color.Success">@L[@cat]</MudButton>
+                }
+            }
+        <MudSpacer/>
         </ToolBarContent>
         <HeaderContent>
             <MudTh>Id</MudTh>
             <MudTh><MudTableSortLabel SortBy="new Func<ClosedQuestion, object>(x=>x.Category.Name)">@L["Category"]</MudTableSortLabel></MudTh>
             <MudTh><MudTableSortLabel SortBy="new Func<ClosedQuestion, object>(x=>x.Name)">@L["Question"]</MudTableSortLabel></MudTh>
-            <MudTh Class="d-flex justify-center">@L["Actions"]</MudTh>
+            <MudTh Style="text-align: center;">@L["Actions"]</MudTh>
         </HeaderContent>
         <RowTemplate>
             <MudTd DataLabel="Id">@context.Id</MudTd>
             <MudTd DataLabel="Category">@context.Category.Name</MudTd>
             <MudTd DataLabel="Question">@context.Name</MudTd>
-            <MudTd Class="d-flex justify-sm-start justify-md-center" DataLabel="Actions">
+            <MudTd Style="text-align: center;" DataLabel="Actions">
                 <MudButton OnClick="@(()=>QuestionDisplay(context))" Color="Color.Tertiary">@L["Display"]</MudButton>
                 <MudButton OnClick="@(()=>QuestionDialog(context))" Color="Color.Success">@L["Edit"]</MudButton>
             </MudTd>
