--- a/ProfileMatch.Components/Admin/AdminPeopleList.razor
+++ b/ProfileMatch.Components/Admin/AdminPeopleList.razor
@@ -4,24 +4,24 @@
 }
 else
 {
-    <MudText Typo="Typo.h6">@L["Resource Administration"]</MudText>
-    
-        <MudGrid Spacing="0" Class="d-flex justify-end">
-                
-             <MudItem xs="12" md="5">
+    <MudGrid Spacing="0" Class="d-flex justify-space-between">
+        <MudItem xs="12" md="5">
+            <MudText Typo="Typo.h6">@L["Resource Administration"]</MudText>
+        </MudItem>
+        <MudItem xs="12" md="5">
             <MudTextField Class="d-flex justify-end"
-            @bind-Value="SearchString"
-            Placeholder=@L["Search"] 
-            Adornment="Adornment.Start" 
-            Immediate="true" 
-            AdornmentIcon="@Icons.Material.Filled.Search"
-            IconSize="Size.Medium"></MudTextField>
-            </MudItem>
-            </MudGrid>
-            <MudTable Items="@Users" Dense="true" Hover="true" Bordered="false" Striped="false" Filter="new Func<ApplicationUser,bool>(FilterFunc1)" SortLabel=@L["Sort By"]>
+                      @bind-Value="SearchString"
+                      Placeholder=@L["Search"]
+                      Adornment="Adornment.Start"
+                      Immediate="true"
+                      AdornmentIcon="@Icons.Material.Filled.Search"
+                      IconSize="Size.Medium"></MudTextField>
+        </MudItem>
+    </MudGrid>
+    <MudTable Items="@Users" Dense="true" Hover="true" Bordered="false" Striped="false" Filter="new Func<ApplicationUser,bool>(FilterFunc1)" SortLabel=@L["Sort By"]>
         <ToolBarContent>
-            
-            <MudButton OnClick="@(()=> EditProfile(new ApplicationUser()))" Class="pa-2 mx-2" Variant=Variant.Text Color="Color.Success">@L["New"]</MudButton>
+
+            <MudButton Style="color: var(--mud-palette-info-darken)!important; border-color: var(--mud-palette-info-darken)" Size="Size.Small" OnClick="@(()=> EditProfile(new ApplicationUser()))" Variant="Variant.Outlined">@L["New User"]</MudButton>
         </ToolBarContent>
         <HeaderContent>
             <MudTh><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.Department.Name)" SortLabel=@L["Department"] T="ApplicationUser">@L["Department"]</MudTableSortLabel></MudTh>
@@ -30,7 +30,7 @@ else
             <MudTh><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.LastName)" SortLabel=@L["Last Name"] T="ApplicationUser">@L["Last Name"]</MudTableSortLabel></MudTh>
             <MudTh><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.DateOfBirth?.Date)" SortLabel=@L["Date Of Birth"] T="ApplicationUser">@L["Birth Date"]</MudTableSortLabel></MudTh>
             <MudTh><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.IsActive)" SortLabel=@L["Is Active"] T="ApplicationUser">@L["Is Active"]</MudTableSortLabel></MudTh>
-            <MudTh style="text-align: center;">@L["Actions"]</MudTh>
+            <MudTh Style="text-align: center;">@L["Actions"]</MudTh>
             <MudTh></MudTh>
         </HeaderContent>
         <RowTemplate>
@@ -40,10 +40,12 @@ else
             <MudTd DataLabel=@L["Last Name"]>@context.LastName</MudTd>
             <MudTd DataLabel=@L["Date Of Birth"]>@context.DateOfBirth?.ToShortDateString()</MudTd>
             <MudTd DataLabel=@L["Is Active"]><MudCheckBox Disabled="true" @bind-Checked="@context.IsActive"></MudCheckBox></MudTd>
-            <MudTd style="text-align: center;" DataLabel="Actions">
-                <MudButton OnClick="@(()=>EditProfile(context))" Color="Color.Tertiary">@L["Edit User"]</MudButton>
-                <MudButton OnClick="@(()=>ShowProfile(context))" Color="Color.Success">@L["Show profile"]</MudButton>
-            </MudTd>           
+            <MudTd Style="text-align: center;">
+            <MudButtonGroup Style="text-align: center;" Size="Size.Small" DataLabel="Actions" Variant="Variant.Outlined" OverrideStyles="false">
+                <MudButton Style="color: var(--mud-palette-info-darken)!important; border-color: var(--mud-palette-info-darken)" OnClick="@(()=>EditProfile(context))" Variant="Variant.Outlined">@L["Edit User"]</MudButton>
+                <MudButton Style="color: var(--mud-palette-success-darken)!important; border-color: var(--mud-palette-success-darken)" OnClick="@(()=>ShowProfile(context))"  Variant="Variant.Outlined">@L["Show profile"]</MudButton>
+            </MudButtonGroup>
+            </MudTd>
         </RowTemplate>
         <PagerContent>
             <MudTablePager RowsPerPageString=@L["Next people"] />
