--- a/ProfileMatch.Components/Dialogs/AdminOpenQuestionDialog.razor
+++ b/ProfileMatch.Components/Dialogs/AdminOpenQuestionDialog.razor
@@ -6,7 +6,7 @@
         </MudForm>
     </DialogContent>
     <DialogActions>
-        <MudButton OnClick="Cancel">@L["Cancel"]</MudButton>
-        <MudButton Color="Color.Error" OnClick="HandleSave">@L["Save"]</MudButton>
+        <MudButton Size="Size.Small" Style="color: var(--mud-palette-warning)!important; border-color: var(--mud-palette-warning)" Variant="Variant.Outlined" OnClick="Cancel">@L["Cancel"]</MudButton>
+        <MudButton OnClick="HandleSave" Variant="Variant.Outlined" StartIcon="@Icons.Material.Filled.Save" Color="Color.Success"  Size="Size.Small">@L["Save"]</MudButton>
     </DialogActions>
 </MudDialog>
