--- a/ProfileMatch.Components/Dialogs/AdminUserDialog.razor
+++ b/ProfileMatch.Components/Dialogs/AdminUserDialog.razor
@@ -64,8 +64,8 @@ else
           
         </DialogContent>
           <DialogActions>
-            <MudButton OnClick="Cancel">@L["Cancel"]</MudButton>
-            <MudButton OnClick="@HandleSave" Color="Color.Error">@L["Save"]</MudButton>
+            <MudButton Size="Size.Small" Style="color: var(--mud-palette-warning)!important; border-color: var(--mud-palette-warning)" Variant="Variant.Outlined" OnClick="Cancel">@L["Cancel"]</MudButton> 
+            <MudButton OnClick="@HandleSave" Variant="Variant.Outlined" StartIcon="@Icons.Material.Filled.Save" Color="Color.Success"  Size="Size.Small">@L["Save"]</MudButton>
             </DialogActions>
     </MudDialog>
 }
