--- a/ProfileMatch.Components/Dialogs/UserQuestionDialog.razor
+++ b/ProfileMatch.Components/Dialogs/UserQuestionDialog.razor
@@ -9,6 +9,7 @@
                  Rounded="true"
                  Border="true"
                  ApplyEffectsToContainer="true"
+                 DisableSliderAnimation="true"
                  PanelClass="pa-6 d-block">
             @foreach (var answerOption in Q.AnswerOptions)
             {
