--- a/ProfileMatch.Sites/AdminDashboard.razor
+++ b/ProfileMatch.Sites/AdminDashboard.razor
@@ -2,7 +2,7 @@
 <AuthorizeView Roles="Admin">
     <Authorized>
         <MudText Typo="Typo.h5" Color="Color.Primary" Class="mb-4">@L["admindashboard"]</MudText>
-        <MudTabs Elevation="1" Rounded="true" PanelClass="mt-6">
+        <MudTabs Elevation="1" Rounded="true" PanelClass="mt-6" DisableSliderAnimation="true">
             <MudTabPanel Text=@L["Users"]>
                 <AdminPeopleList />
             </MudTabPanel>
