--- a/ProfileMatch.Sites/ManagerDashboard.razor
+++ b/ProfileMatch.Sites/ManagerDashboard.razor
@@ -2,7 +2,7 @@
     <AuthorizeView Roles="Manager, Admin">
         <Authorized>
             <MudText Typo="Typo.h5" Color="Color.Primary" Class="mb-4">@L["Manager Dashboard"]</MudText>
-            <MudTabs Elevation="1" Rounded="true" PanelClass="mt-6">
+            <MudTabs Elevation="1" Rounded="true" PanelClass="mt-6" DisableSliderAnimation="true">
                 <MudTabPanel Text=@L["Compare"]><ManagerClosedQuestions /></MudTabPanel>
             </MudTabs>
         </Authorized>
