--- a/ProfileMatch.Sites/UserDashboard.razor
+++ b/ProfileMatch.Sites/UserDashboard.razor
@@ -2,7 +2,7 @@
     <AuthorizeView>
         <Authorized>
             <MudText Typo="Typo.h5" Color="Color.Primary" Class="mb-4">@L["User Dashboard"]</MudText>
-            <MudTabs Elevation="1" Rounded="true" PanelClass="mt-6">
+            <MudTabs Elevation="1" Rounded="true" PanelClass="mt-6" DisableSliderAnimation="true">
                 <MudTabPanel Text=@L["Account"] Icon="@Icons.Filled.PersonOutline"><UserAccount /></MudTabPanel>
                 <MudTabPanel Text=@L["Open Questions"] Icon="@Icons.Filled.FactCheck"><UserOpenQuestionsTable /></MudTabPanel>
                 <MudTabPanel Text=@L["Closed Questions"] Icon="@Icons.Filled.FactCheck"><UserClosedQuestionsTable /></MudTabPanel>
