--- a/ProfileMatch.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ProfileMatch.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -6,6 +6,7 @@
 @inject IStringLocalizer<LanguageService> L
 
 <body class="text-center" >
+    
     <div class="container d-flex p-3 mx-auto w-100 flex-column">
         <header class="mb-auto">
         </header>
@@ -33,43 +34,46 @@
     </form>
 
     <div class="text-center">
-        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#Modal">Pomoc</button>
+        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#Modal">@L["Pomoc"]</button>
     </div>
     <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="ModalLabel">Pomoc</h5>
-                </div>
+                
                 <div class="modal-body">
                     <form>
                         <div class="form-group row">
-                            <label for="staticEmail" class="col-sm-2 col-form-label">Email:</label>
+                            <label for="staticEmail" class="col-sm-2 col-form-label">@L["Email"]:</label>
                             <div class="col-sm-10">
                                 <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="admin@profilematch.pl">
                             </div>
                         </div>
                         <br />
                         <div class="form-group">
-                            <label for="exampleFormControlSelect1">Wybierz temat:</label>
+                            <label for="exampleFormControlSelect1">@L["Wybierz temat"]:</label>
                             <select class="form-control" id="Subject">
-                                <option>1. Zapomniałeś loginu lub hasła</option>
-                                <option>2. Nie posiadasz konta</option>
-                                <option>3. Nie możesz się zalogować</option>
+                                <option>@L["1. Zapomniałeś loginu lub hasła"]</option>
+                                <option>@L["2. Nie posiadasz konta"]</option>
+                                <option>@L["3. Nie możesz się zalogować"]</option>
                                 <option>4. xxx</option>
                                 <option>5. xxx</option>
                             </select>
                             <br />
                         </div>
                         <div class="form-group">
-                            <label for="exampleFormControlTextarea1">Opisz swój problem:</label>
+                            <label for="exampleFormControlTextarea1">@L["Opisz swój problem"]:</label>
                             <textarea class="message form-control" id="Message" rows="3"></textarea>
                         </div>
                     </form>
                 </div>
+
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Anuluj</button>
-                    <button class="btn btn-primary" type="submit" onclick="SendMail()">Wyślij</button>
+                    
+ 
+ 
+                    <button type="button" class="btn btn-warning btn-sm" data-bs-dismiss="modal">@L["Anuluj"]</button>
+                    <button class="btn btn-primary btn-sm" type="submit" onclick="SendMail()">&nbsp&nbsp&nbsp @L["Wyślij"]&nbsp&nbsp&nbsp&nbsp</button>
+                   
                 </div>
             </div>
         </div>
@@ -81,7 +85,7 @@
      <script src="~/js/SendMail.js"></script>
     
 </body>
-
+ 
 
 
 
