--- a/ProfileMatch.Components/Admin/AdminMaintenance.razor
+++ b/ProfileMatch.Components/Admin/AdminMaintenance.razor
@@ -5,17 +5,17 @@
             <MudCard>
                 <MudCardContent>
                     <MudSelect T="string">
-                        <MudSelectItem T="string" Value="@("Department")">Department</MudSelectItem>
-                        <MudSelectItem T="string" Value="@("ApplicationUser")">User</MudSelectItem>
-                        <MudSelectItem T="string" Value="@("AnswerOption")">AnswerOption</MudSelectItem>
-                        <MudSelectItem T="string" Value="@("Category")">Category</MudSelectItem>
+                        <MudSelectItem T="string" Value="@("Department")">@L["Department"]</MudSelectItem>
+                        <MudSelectItem T="string" Value="@("ApplicationUser")">@L["User"]</MudSelectItem>
+                        <MudSelectItem T="string" Value="@("AnswerOption")">@L["AnswerOption"]</MudSelectItem>
+                        <MudSelectItem T="string" Value="@("Category")">@L["Category"]</MudSelectItem>
                     </MudSelect>
 <MudButton HtmlTag="label"
            Variant="Variant.Filled"
            Color="Color.Inherit"
            StartIcon="@Icons.Custom.FileFormats.FileExcel"
            for="fileInput">
-    Upload File
+    @L["Upload File"]
 </MudButton>
                 </MudCardContent>
             </MudCard>
