--- a/ProfileMatch.Components/User/UserCategoryList.razor
+++ b/ProfileMatch.Components/User/UserCategoryList.razor
@@ -1,47 +1,40 @@
-﻿<AuthorizeView>
-
-    @if ((context.User.Identity.Name).ToUpper() == CurrentUser.NormalizedEmail)
-    {
-        <MudSwitch @bind-Checked="@edit">@L["Edit"]</MudSwitch>
-    }
-</AuthorizeView>
-@if (publicCategoriesVM.Count == 0)
-{
-    <MudItem xs="0" sm="8" md="9">
-    </MudItem>
-}
-else
-{
-    <MudItem Class="pa-2" sm="12" xs="12" md="6">
-        <MudCard>
-            <MudCardHeader>
-                <CardHeaderContent>
-                    <MudText Typo="Typo.h6">@L["My Categories"]</MudText>
-
-                </CardHeaderContent>
-            </MudCardHeader>
-            <MudCardContent>
-                @if (!edit)
+﻿<MudItem Class="pa-2" sm="12" xs="12" md="6">
+    <MudCard>
+        <MudCardHeader>
+            <CardHeaderContent>
+                <MudText Typo="Typo.h6">
+                    @L["My Categories"] <AuthorizeView>
+                        @if ((context.User.Identity.Name).ToUpper() == CurrentUser.NormalizedEmail)
+                        {
+                            <MudSwitch @bind-Checked="@edit">@L["Edit"]</MudSwitch>
+                        }
+                    </AuthorizeView>
+                </MudText>
+            </CardHeaderContent>
+        </MudCardHeader>
+        <MudCardContent>
+            @if (!edit)
+            {
+                @foreach (var uc in publicCategoriesVM)
                 {
-                    @foreach (var uc in publicCategoriesVM)
-                    {
-                        <MudChip Text="@uc.CategoryName"></MudChip>
-                    }
+                    <MudChip Text="@uc.CategoryName"></MudChip>
                 }
-            </MudCardContent>
-        </MudCard>
-    </MudItem>
-}
 
- @if(edit){
-    <MudTable Items="UserCategoryVMs" T="UserCategoryVM">
-        <HeaderContent>
-            <MudTh>@L["Category"]</MudTh>
-            <MudTh>@L["I want to develop"]</MudTh>
-        </HeaderContent>
-        <RowTemplate>
-            <MudTd DataLabel="@L["Category"]">@context.CategoryName</MudTd>
-            <MudTd DataLabel="@L["I want to develop"]"><MudCheckBox @onclick=@(()=>SetCategoryAsync(context)) @bind-Checked="@context.IsSelected"/></MudTd>
-        </RowTemplate>
-    </MudTable>
-}
+            }
+            @if (edit)
+            {
+                <MudTable Items="UserCategoryVMs" T="UserCategoryVM">
+                    <HeaderContent>
+                        <MudTh>@L["Category"]</MudTh>
+                        <MudTh>@L["I want to develop"]</MudTh>
+                    </HeaderContent>
+                    <RowTemplate>
+                        <MudTd DataLabel="@L["Category"]">@context.CategoryName</MudTd>
+                        <MudTd DataLabel="@L["I want to develop"]"><MudCheckBox @onclick=@(()=>SetCategoryAsync(context)) @bind-Checked="@context.IsSelected" /></MudTd>
+                    </RowTemplate>
+                </MudTable>
+            }
+        </MudCardContent>
+    </MudCard>
+</MudItem>
+
